--- a/Lab1/SRC/Makefile
+++ b/Lab1/SRC/Makefile
@@ -1,7 +1,7 @@
 all: mysort
 
 mysort: main.c  sorts.c
-	cc -Wall -Werror -I. -o mysort main.c sorts.c
+	gcc -Wall -Werror -I. -o mysort main.c sorts.c
 
 clean:
 	rm -f mysort *.o
