--- a/Lab2/SRC/Counter/Makefile
+++ b/Lab2/SRC/Counter/Makefile
@@ -1,7 +1,7 @@
-all: mysort
+all: counter
 
-mysort: main.cpp  sorts.cpp
-	g++ -Wall -Werror -I. -o mysort main.cpp sorts.cpp custom_locks.cpp -pthread
+counter: main.cpp  sorts.cpp
+	g++ -Wall -Werror -I. -o counter main.cpp sorts.cpp custom_locks.cpp -pthread
 
 clean:
-	rm -f mysort *.o
+	rm -f counter *.o
