Make file integrated !

--- a/Lab2/SRC/BucketSort/Makefile
+++ b/Lab2/SRC/BucketSort/Makefile
@@ -2,6 +2,6 @@ all: mysort
 
 mysort: main.cpp  sorts.cpp
 	g++ -Wall -Werror -I. -o mysort main.cpp sorts.cpp custom_locks.cpp -pthread
-
+	mv mysort ..
 clean:
 	rm -f mysort *.o
