--- a/Lab2/SRC/Counter/Makefile
+++ b/Lab2/SRC/Counter/Makefile
@@ -1,7 +1,8 @@
 all: counter
 
-counter: main.cpp  sorts.cpp
-	g++ -Wall -Werror -I. -o counter main.cpp sorts.cpp custom_locks.cpp -pthread
+counter: counter.cpp  sorts.cpp
+	g++ -Wall -Werror -I. -o counter counter.cpp sorts.cpp custom_locks.cpp -pthread
+	mv counter ..
 
 clean:
 	rm -f counter *.o
